on home feed added dish_method and dish_comments; put linebreaks in places; fixed hashtag_links to have conditional_escape

--- a/mysite/cooklog/static/css/cooklog.css
+++ b/mysite/cooklog/static/css/cooklog.css
@@ -5,7 +5,7 @@ h2 a {
 body {
     margin-left: 0px;
     padding-left: 0px;
-    background-color: #eef7fa; /*#d3d3d3;*/ /*FFFEEE;*/
+    background-color: #f6fbfc; /*#eef7fa; /*#d3d3d3;*/ /*FFFEEE;*/
     color: #B1654B;
     font-family: 'Merriweather', serif;
     padding-bottom: 0px;
@@ -128,7 +128,7 @@ a:visited {
     margin-left: 10px;
     min-height: 110px;
     /*border: 4px solid #FDC08E;*/
-    background: #f6fbfc;
+    background: #ffffff;
     margin-bottom: 10px;
     width: 60%; /* mobile should be 100%!*/
 }
@@ -180,9 +180,22 @@ a:visited {
     margin-bottom: 2px;
 }
 
+.dish-mini-dish-method {
+    font-size: 10px;
+    background: #f6fbfc;
+    margin-bottom: 2px;
+}
+
+.dish-mini-dish-comments {
+    font-size: 10px;
+    background: #f6fbfc;
+    margin-bottom: 2px;
+}
+
 .dish-mini-social-comments-and-likes {
     font-size: 10px;
-    background: #eef7fa;
+    background: #f6fbfc;
+    margin-bottom: 2px;
 }
 
 .dish-mini-single-comment {
